--- a/gemfile
+++ b/gemfile
@@ -1,5 +1,7 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
+gem 'pg'
 gem 'sinatra'
-gem 'capybara'
-gem 'rspec'
+
+gem 'capybara', group: :test
+gem 'rspec', group: :test
